# hybrid-rag-engine

./: Estructura_Archivos  README.md  docker-compose.yml  makefile  pyproject.toml
`src/ingestion/: pipeline.py
app/: streamlit_app.py
src/evaluation/: ragas_eval.py
src/ingestion/: pipeline.py
