[project]
name = "hybrid-rag-engine"
version = "0.1.0"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.110"
uvicorn = ">=0.29"
langchain = ">=0.2"
langchain-openai = ">=0.1"
langchain-qdrant = ">=0.1"
qdrant-client = ">=1.9"
rank-bm25 = ">=0.2.2"
sentence-transformers = ">=3.0"
ragas = ">=0.1.9"
streamlit = ">=1.35"
pymupdf4llm = ">=0.0.12"
python-dotenv = ">=1.0"
pydantic = ">=2.7"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
